# verif-static-analyzer

./: .dextool_mutate.toml  .gitignore  CMakeLists.txt  LICENSE  configure.sh  test.sh
.github/workflows/: c-cpp.yml
my-lit/: CMakeLists.txt  my-lit.in
src/: CMakeLists.txt  def.h  main.cpp
src/ESCA/: CMakeLists.txt  ESCA.cpp  ESCA.h
src/ESCA/AST/: ESCAASTVisitor.cpp  ESCAASTVisitor.h
src/ESCA/FSM/: FSM.cpp  StateFSM.cpp
src/ESCA/SMT/: FormulaSMT.h  Variable.h  VersionedVariable.h
src/ESCA/utils/: DefectStorage.cpp  DefectStorage.h  ExecSolver.h  Location.h  common.h
src/GoToLater/: CMakeLists.txt  GoToLater.cpp  GoToLater.h  GoToLaterASTConsumer.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Basic/: basic.cpp
test/ESCA/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/GoToLater/: basic.cpp  lambda.cpp  macro-macro.cpp  macro-not.cpp  macro.cpp  same-line.cpp
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
unittests/: CMakeLists.txt
unittests/Core/: CMakeLists.txt  basic.cpp
unittests/GoToLater/: CMakeLists.txt  visitor.cpp
